--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             <li>
                 <a href="./LemonPie/index.html">Lemon Pie</a>
             </li>
-            <li>[TOP SECRET]</li>
+            <li> <a href="./PetShop/index.html">PetShop</a>
+            </li>
         </ul>
     </main>
 </body>
