--- a/PetShop/index.html
+++ b/PetShop/index.html
@@ -25,7 +25,7 @@
                 Contactanos
             </ul>
         </nav>
-        <img src="img/Logo.png" alt="Logo Front Cat&Dog">
+        <img src="img\logo.png" alt="Logo Front Cat&Dog">
     </header>
 
     <main>
@@ -56,7 +56,7 @@
             <h3>Comedero para Perro</h3>
             <h3>$250</h3>
 
-            <img src="img\Huesito.png" alt="Fondo">
+            <img src="img\huesito.png" alt="Fondo">
             <h3>Juguete Huesito</h3>
             <h3>$650</h3>
 
